# ghciwatch

./: .envrc  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  book.toml  cli.html  comment-evaluation.html  faq.html  flake.nix  garnix.yaml  getting-started.html  index.html  install.html  introduction.html  justfile  lifecycle-hooks.html  no-load.html  print.html  reproducer.sh  searchindex.js  searchindex.json  toc.html  toc.js  treefmt.toml
.config/: nextest.toml
.github/: CODEOWNERS  labeler.yml  pinact.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yaml  get-crate-version.sh  label-issues.yaml  label-prs.yaml  pages.yaml  pinact-check.yml  release.yaml  version.yaml
clap-markdown/: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
clap-markdown/examples/: complex_app.md  complex_app.rs
clap-markdown/src/: lib.rs
clap-markdown/tests/: test_examples.rs
crates/ghciwatch/: Cargo.toml
crates/ghciwatch/src/: aho_corasick.rs  cli.rs  command_ext.rs  cwd.rs  format_bulleted_list.rs  ignore.rs  incremental_reader.rs  lib.rs  shutdown.rs
crates/ghciwatch/src/clap/: camino.rs
crates/ghciwatch/src/clap_markdown/: formatter.rs  mod.rs
crates/ghciwatch/src/ghci/: compilation_log.rs  ghci_command.rs  loaded_module.rs
crates/ghciwatch/src/ghci/parse/: lines.rs  module_and_files.rs  show_targets.rs
crates/ghciwatch/src/tracing/: mod.rs
crates/test-harness/: Cargo.toml
crates/test-harness/src/: fs.rs  ghc_version.rs  ghciwatch.rs  lib.rs  tracing_reader.rs
crates/test-harness/src/matcher/: base_matcher.rs  field_matcher.rs  into_matcher.rs  negative_matcher.rs  never_matcher.rs  or_matcher.rs
docs/: SUMMARY.md  cli.md  comment-evaluation.md  faq.md  getting-started.md  install.md  introduction.md  lifecycle-hooks.md  multiple-components.md  no-load.md  rust_for_haskellers.md  tasty-integration.md
docs/integration/: multiple-components.md  multiple-packages.md  tasty.md
ghcid-ng/: Cargo.toml
ghcid-ng/src/: aho_corasick.rs  buffers.rs  cli.rs  command.rs  event_filter.rs  incremental_reader.rs  main.rs  watcher.rs
ghcid-ng/src/clap/: clonable_command.rs  mod.rs
ghcid-ng/src/ghci/: mod.rs  stderr.rs  stdin.rs  stdout.rs
ghcid-ng/src/ghci/parse/: haskell_grammar.rs  mod.rs  module_and_files.rs  module_set.rs
ghcid-ng/src/ghci/parse/ghc_message/: cant_find_file_diagnostic.rs  mod.rs  (+8 more)
ghcid-ng/src/tracing/: mod.rs
ghcid-ng/tests/: basic.rs  error_log.rs  failed_modules.rs  test.rs
ghcid-ng/tests/data/simple/: package.yaml  simple.cabal
ghcid-ng/tests/data/simple/test/: TestMain.hs
ghcid-ng/tests/data/simple/test-main/: Main.hs
integration/: multiple-components.html  multiple-packages.html  tasty.html
nix/: get-crate-version.nix  ghcid-ng.nix  ghciwatch.nix  makePackages.nix  packagesFromDirectory.nix  rust-toolchain.nix
src/: async_buffer_redirect.rs  buffers.rs  canonicalized_path.rs  cli-about.txt  cli.rs  clonable_command.rs  command.rs  command_ext.rs  cwd.rs  event_filter.rs  fake_reader.rs  foo.rs  haskell_show.rs  haskell_source_file.rs  hooks.rs  ignore.rs  incremental_reader.rs  lib.rs  lines.rs  main.rs  maybe_async_command.rs  normal_path.rs  read_logs_from.rs  relative_path.rs  runner.rs  shutdown.rs  string_case.rs  sync_sentinel.rs  terminal.rs  textwrap.rs  tui.rs  watcher.rs
src/clap/: camino.rs  error_message.rs  fmt_span.rs  ghci_command.rs  humantime.rs  mod.rs  normal_path.rs  rust_backtrace.rs
src/clap_markdown/: formatter.rs
src/ghci/: compilation_log.rs  error_log.rs  file_classifier.rs  ghci_command.rs  loaded_module.rs  manager.rs  mod.rs  module_set.rs  process.rs  progress_writer.rs  show_modules.rs  stderr.rs  stdin.rs  stdout.rs  warning_formatter.rs  warning_tracker.rs  write.rs  writer.rs
src/ghci/parse/: eval.rs  haskell_grammar.rs  haskell_source_file.rs  lines.rs  mod.rs  module_and_files.rs  module_set.rs  show_paths.rs  show_targets.rs  target_kind.rs  transform_till.rs
src/ghci/parse/ghc_message/: cant_find_file_diagnostic.rs  compilation_summary.rs  compiling.rs  exception.rs  generic_diagnostic.rs  mod.rs  module_import_cycle_diagnostic.rs  no_location_info_diagnostic.rs  not_found.rs  path_colon.rs  position.rs  severity.rs  single_quote.rs  single_quoted.rs
src/json/: mod.rs  reader.rs
src/server/: connect.rs  mod.rs  read.rs  write.rs
src/socket/: connect.rs  mod.rs  read.rs  write.rs
src/tracing/: format.rs  mod.rs
src/tracing/human/: event.rs  fields.rs  mod.rs  style.rs
src/tui/: events.rs  mod.rs  terminal.rs
test-harness/: Cargo.toml  README.md
test-harness-macro/: Cargo.toml
test-harness-macro/src/: lib.rs
test-harness/src/: checkpoint.rs  fs.rs  ghc_version.rs  ghcid_ng.rs  ghciwatch.rs  internal.rs  lib.rs  matcher.rs  timeout_mult.rs  tracing_json.rs  tracing_reader.rs
test-harness/src/matcher/: and_matcher.rs  base_matcher.rs  field_matcher.rs  fused_matcher.rs  into_matcher.rs  mod.rs  negative_matcher.rs  never_matcher.rs  option_matcher.rs  or_matcher.rs  span_matcher.rs
tests/: README.md  all_good.rs  basic.rs  clap_markdown.rs  clear.rs  dot_ghci.rs  error_log.rs  eval.rs  event_coalesce.rs  experimental_features.rs  failed_modules.rs  globs.rs  hooks.rs  load.rs  progress.rs  reload.rs  remove.rs  rename.rs  restart.rs  shutdown.rs  test.rs  tty_progress.rs  warning_persistence.rs  watch_extension.rs
tests/data/: fake-ghci.sh
tests/data/common/: common.mk
tests/data/simple/: .gitignore  Makefile  cabal.project  my-simple-package.cabal  package.yaml
tests/data/simple/src/: MyLib.hs  MyModule.hs
tests/data/simple/test/: TestMain.hs
tests/data/slow-compile/: .gitignore  Makefile  cabal.project  package.yaml
tests/data/slow-compile/src/: ExtraA.hs  ExtraB.hs  ExtraC.hs  SlowModule.hs
tests/data/with-dep/: Makefile  cabal.project  my-simple-package.cabal  package.yaml
tests/data/with-dep/simple-dep/: simple-dep.cabal
tests/data/with-dep/src/: MyLib.hs
tests/data/with-test-suite/: cabal.project  my-simple-package.cabal
(+6 files in other folders)
