[workspace]
members = [
    "test-harness",
    "test-harness-macro",
]
resolver = "2"

# See: https://github.com/crate-ci/cargo-release/blob/master/docs/reference.md
[workspace.metadata.release]
# Set the commit message.
pre-release-commit-message = "Release {{crate_name}} version {{version}}"
consolidate-commits = false # One commit per crate.
tag = false # Don't tag commits.
push = false # Don't do `git push`.
publish = false # Don't do `cargo publish`.

# Define the root package: https://doc.rust-lang.org/cargo/reference/workspaces.html#root-package
[package]
name = "ghcid-ng"
version = "0.3.7"
edition = "2021"
authors = [
    "Rebecca Turner <rebeccat@mercury.com>"
]
description = "ghci-based file watcher and recompiler for Haskell projects"
readme = "README.md"
homepage = "https://github.com/MercuryTechnologies/ghcid-ng"
repository = "https://github.com/MercuryTechnologies/ghcid-ng"
license = "MIT"
keywords = ["haskell", "ghci", "watchexec"]
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "1.0.2"
backoff = { version = "0.4.0", default-features = false }
camino = "1.1.4"
clap = { version = "4.3.2", features = ["derive", "wrap_help", "env"] }
humantime = "2.1.0"
itertools = "0.11.0"
line-span = "0.1.5"
miette = { version = "5.9.0", features = ["fancy"] }
nix = { version = "0.26.2", default_features = false, features = ["process"] }
once_cell = "1.18.0"
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
path-absolutize = "3.1.1"
pathdiff = { version = "0.2.1", features = ["camino"] }
regex = { version = "1.9.3", default-features = false, features = ["perf", "std"] }
shell-words = "1.1.0"
strip-ansi-escapes = "0.2.0"
tap = "1.0.1"
textwrap = { version = "0.16.0", features = ["terminal_size"] }
tokio = { version = "1.28.2", features = ["full", "tracing"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "time", "json", "registry"] }
watchexec = "2.3.0"
watchexec-signals = "1.0.0"
winnow = "0.5.15"

[dev-dependencies]
test-harness = { path = "test-harness" }
expect-test = "1.4.0"
indoc = "1.0.6"
pretty_assertions = "1.2.1"
tracing-test = { version = "0.2", features = ["no-env-filter"] }

[lib]
path = "src/lib.rs"
