[package]
name = "clap-markdown"
version = "0.1.3-ghciwatch"
authors = ["Connor Gray <code@connorgray.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ConnorGray/clap-markdown"
description = "Autogenerate Markdown documentation for clap command-line tools"
keywords = ["clap", "markdown", "command-line", "help"]
categories = ["command-line-interface", "command-line-utilities", "development-tools", "accessibility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~4"
textwrap = { version = "0.16.1", default-features = false }

[dev-dependencies]
clap = { version = "~4", features = ["derive"] }
expect-test = "1.5.0"
