[package]
name = "test-harness-macro"
version = "0.1.0"
edition = "2021"

description = "Test attribute for ghciwatch"

publish = false

[lib]
proc-macro = true

[dependencies]
quote = "1.0.33"
syn = { version = "2.0.29", features = ["full"] }

# See: https://github.com/crate-ci/cargo-release/blob/master/docs/reference.md
[package.metadata.release]
release = false
