[package]
name = "test-harness"
version = "0.1.0"
edition = "2021"
description = "Test harness for ghciwatch"
publish = false

[dependencies]
backoff = { version = "0.4.0", default-features = false }
fs_extra = "1.3.0"
futures-util = "0.3.28"
itertools = "0.11.0"
miette = { version = "5.9.0", features = ["fancy"] }
nix = { version = "0.26.2", default_features = false, features = ["process", "signal"] }
regex = "1.9.4"
serde = { version = "1.0.186", features = ["derive"] }
serde_json = "1.0.105"
tempfile = "3.8.0"
test-harness-macro = { path = "../test-harness-macro" }
test_bin = "0.4.0"
tokio = { version = "1.28.2", features = ["full", "tracing"] }
tracing = "0.1.37"

# See: https://github.com/crate-ci/cargo-release/blob/master/docs/reference.md
[package.metadata.release]
release = false
