cabal-version: 3.0

name: my-simple-package
version: 0.1.0.0
author: Rebecca Turner <rebeccat@mercury.com>
build-type: Simple

flag local-dev
  description: Turn on development settings, like auto-reload templates.
  manual: True
  default: False

library
  exposed-modules: MyLib
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends: base
  default-language: Haskell2010

library test-dev
  exposed-modules: TestMain MyLib
  hs-source-dirs: test src
  ghc-options: -Wall
  build-depends: base
  default-language: Haskell2010
  if flag(local-dev)
    buildable: True
  else
    buildable: False

library test-lib
  exposed-modules: TestMain
  hs-source-dirs: test
  ghc-options: -Wall
  build-depends: base
  default-language: Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: test-main
  ghc-options: -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends: base
  default-language: Haskell2010
  if flag(local-dev)
    build-depends: test-dev
  else
    build-depends: my-simple-package, test-lib
