cabal-version: 3.0
name: my-simple-package
version: 0.1.0.0
license: MIT
author: Rebecca Turner
maintainer: rebeccat@mercury.com
build-type: Simple

common warnings
    ghc-options: -Wall

library
    import: warnings
    default-language: Haskell2010
    hs-source-dirs: src
    build-depends: base
    exposed-modules:
        MyLib,
        MyModule

test-suite my-simple-package-test
    import: warnings
    default-language: Haskell2010
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: TestMain.hs
    build-depends:
        base,
        my-simple-package

library test-dev
    import: warnings
    default-language: Haskell2010
    hs-source-dirs:
        src
        test
    build-depends:
        base
    exposed-modules:
        MyLib,
        MyModule,
        TestMain
